# agent_c_framework

./: .agent_c.meta.yaml  .gitignore  .localworkspaces.json  README.md  check_environment.py  check_pdf_deps.py  debug_base64_error.py  debug_json_schema.py  direct_test.py  example.env  execute_tests.py  final_test.py  final_verification.py  fix_pdf_tool_issues.py  install_test_deps.py  pytest.ini  quick_import_test.py  run_json_debug.py  run_test_step1.py  run_test_step2.py  run_test_step3.py  run_tests.py  simple_test.py  test_pdf_comprehensive.py  test_pdf_tool.py  test_pdf_tool_with_agents.py  test_simple_pdf_tool.py  verify_pdf_tool.py  verify_pdf_tool_integration.py
src/agent_c_api_ui/agent_c_api/: .agent_c.meta.yaml  .env.example  README.md  pyproject.toml
src/agent_c_api_ui/agent_c_api/docs/: redis_dependencies.md  redis_streams.md
src/agent_c_api_ui/agent_c_api/docs/agent_context/: tools.md
src/agent_c_api_ui/agent_c_api/docs/api_v2/: migration_guide.md
src/agent_c_api_ui/agent_c_api/docs/configuration/: redis_environment_variables.md
src/agent_c_api_ui/agent_c_api/src/agent_c_api/: main.py
src/agent_c_api_ui/agent_c_api/src/docs/: agent_manager.md
src/agent_c_api_ui/agent_c_api/tests/: conftest.py  test_admin_redis_endpoints.py  test_redis_runtime_controller.py
src/agent_c_core/: .agent_c.meta.yaml  __init__.py  pyproject.toml  pytest.ini  run_comprehensive_tests.py  setup.py
src/agent_c_core/.scratch/: readme.txt
src/agent_c_core/agent_c/: __init__.py
src/agent_c_core/agent_c/agents/: __init__.py  base.py  claude.py  gpt.py
src/agent_c_core/agent_c/chat/: __init__.py  session_manager.py  zep_session_manager.py
src/agent_c_core/agent_c/models/: __init__.py  chat_event.py  observable.py
src/agent_c_core/agent_c/models/chat_history/: __init__.py  chat_memory.py  chat_session.py  chat_summary.py  content.py  memory_message.py  user.py
src/agent_c_core/agent_c/models/events/: __init__.py  audio.py  base.py  chat.py  render_media.py  session_event.py  tool_calls.py
src/agent_c_core/agent_c/models/input/: __init__.py  audio_input.py  base.py  file_input.py  (+4 more)
src/agent_c_core/agent_c/prompting/: __init__.py  prompt_builder.py
src/agent_c_core/agent_c/toolsets/: __init__.py  tool_chest.py  tool_set.py
src/agent_c_core/agent_c/util/: __init__.py
src/agent_c_core/docs/: common_chat_message_audit_report.md  event_session_logger_api_reference.md  intelligent_message_management_architecture.md  redis_streams_configuration_model_design.md  redis_streams_dynamic_mode_switching_architecture.md  redis_streams_exclusive_callback.md  redis_streams_health_monitoring_circuit_breaker_design.md  redis_streams_integration_guide.md  redis_streams_resilient_design_summary.md  session_logger_migration_guide.md
src/agent_c_core/tests/: README.md  test_persona_file.py  test_tool_chest.py
src/agent_c_core/tests/agents/: test_base_agent_redis_integration.py
src/agent_c_core/tests/integration/: test_comprehensive_system_integration.py  test_context_integration.py  test_pruning_integration.py  test_structured_logging_integration.py  test_testing_infrastructure_integration.py
src/agent_c_core/tests/streaming/: __init__.py  test_redis_stream_manager.py
(+4040 files in other folders)
